--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .icon {
+    @apply hidden lg:inline-flex items-center justify-center p-2 h-10 w-10 text-gray-700 bg-gray-100 rounded-full;
+  }
+}
