--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .icon {
-    @apply hidden lg:inline-flex items-center justify-center p-2 text-gray-700 bg-gray-200 hover:bg-gray-300 rounded-full;
+    @apply hidden lg:inline-flex items-center justify-center p-2 cursor-pointer text-gray-700 bg-gray-200 hover:bg-gray-300 rounded-full;
   }
 }
